Fix: Edit HTML & CSS to improve layout on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -77,6 +77,12 @@ body {
       justify-content: center;
       width: 100%;
     }
+
+    /* Add padding to the search bar */
+    form.d-flex {
+        padding-top: 20px;
+    }
+    
   }
 
 
